--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-minimal
+title: Ingxoxo
+description: A First Year Physical Chemistry discussion platform and textbook
+logo: logo.png
